--- a/classification.ipynb
+++ b/classification.ipynb
@@ -2,51 +2,39 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "<h2>Classification</h2>\n",
-    "\n",
-    "Authors: Casper Smit and Samantha Visbeek"
-   ],
-   "metadata": {}
+    "<h2>Classification</h2>"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "source": [
-    "# imports\r\n",
-    "import pandas as pd\r\n",
-    "import numpy as np\r\n",
-    "from import_data import *\r\n",
-    "from util import *\r\n"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package wordnet to /home/samantha/nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# imports\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from import_data import *\n",
+    "from util import *"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "source": [
-    "# create dataframe\r\n",
-    "df = import_merge()\r\n",
-    "df = clean_dataframe(df)\r\n",
-    "\r\n",
-    "# drop rows where hdi_score is Nan\r\n",
-    "df = df[df['hdi_score'].notna()]\r\n",
-    "df = df.reset_index(drop=True)\r\n",
-    "df.head()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "application/vnd.jupyter.widget-view+json": {
        "model_id": "903be6fd171e4d5c8321fb2f5aacc2ee",
@@ -57,11 +45,12 @@
        "  0%|          | 0/8 [00:00<?, ?it/s]"
       ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Country Cleaning Report:\n",
       "\t933 values cleaned (11.0%)\n",
@@ -70,7 +59,6 @@
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -293,116 +281,117 @@
        "[5 rows x 22 columns]"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 2
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "# create dataframe\n",
+    "df = import_merge()\n",
+    "df = clean_dataframe(df)\n",
+    "\n",
+    "# drop rows where hdi_score is Nan\n",
+    "df = df[df['hdi_score'].notna()]\n",
+    "df = df.reset_index(drop=True)\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "<h3>Text Processing</h3>\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "source": [
-    "# remove all names from the speeches\r\n",
-    "df['SpeechNoNames'] = df['Speech'].apply(remove_names)\r\n",
-    "\r\n",
-    "# text processing\r\n",
-    "df['Speech'] = df['Speech'].apply(clean_string).apply(remove_stopw)\r\n",
-    "df['SpeechNoNames'] = df['SpeechNoNames'].apply(clean_string).apply(remove_stopw)"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "# remove all names from the speeches\n",
+    "df['SpeechNoNames'] = df['Speech'].apply(remove_names)\n",
+    "\n",
+    "# text processing\n",
+    "df['Speech'] = df['Speech'].apply(clean_string).apply(remove_stopwords)\n",
+    "df['SpeechNoNames'] = df['SpeechNoNames'].apply(clean_string).apply(remove_stopwords)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "source": [
-    "# remove all words that only occur once in the whole dataframe\r\n",
-    "df['Speech'] = remove_single_occurence(df['Speech'])\r\n",
-    "df['SpeechNoNames'] = remove_single_occurence(df['SpeechNoNames'])"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "# remove all words that only occur once in the whole dataframe\n",
+    "df['Speech'] = remove_single_occurence(df['Speech'])\n",
+    "df['SpeechNoNames'] = remove_single_occurence(df['SpeechNoNames'])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "source": [
-    "# convert list to string\r\n",
-    "df['Speech'] = df['Speech'].apply(lambda x: ' '.join(x))\r\n",
-    "df['SpeechNoNames'] = df['SpeechNoNames'].apply(lambda x: ' '.join(x))"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "# convert list to string\n",
+    "df['Speech'] = df['Speech'].apply(lambda x: ' '.join(x))\n",
+    "df['SpeechNoNames'] = df['SpeechNoNames'].apply(lambda x: ' '.join(x))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "source": [
-    "# make dataframes of the tf-idf of the words in each speech\r\n",
-    "df_tfidf = tf_idf(df['Speech'])\r\n",
-    "df_tfidfNoNames = tf_idf(df['SpeechNoNames'])"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "/home/samantha/.local/lib/python3.8/site-packages/sklearn/utils/deprecation.py:87: FutureWarning: Function get_feature_names is deprecated; get_feature_names is deprecated in 1.0 and will be removed in 1.2. Please use get_feature_names_out instead.\n",
       "  warnings.warn(msg, category=FutureWarning)\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# make dataframes of the tf-idf of the words in each speech\n",
+    "df_tfidf = tf_idf(df['Speech'])\n",
+    "df_tfidfNoNames = tf_idf(df['SpeechNoNames'])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "source": [
-    "# get the features and the target for the classification\r\n",
-    "features = df_tfidf\r\n",
-    "featuresNoNames = df_tfidfNoNames\r\n",
-    "\r\n",
-    "target = df['hdi_class']"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "# get the features and the target for the classification\n",
+    "features = df_tfidf\n",
+    "featuresNoNames = df_tfidfNoNames\n",
+    "\n",
+    "target = df['hdi_class']"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "source": [
-    "# create the logistic regression model and predict\r\n",
-    "pred, classes, weights, accuracy, precision, recall = logreg(features, target)\r\n",
-    "predNN, classesNN, weightsNN, accuracyNN, precisionNN, recallNN = logreg(featuresNoNames, target)"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "# create the logistic regression model and predict\n",
+    "pred, classes, weights, accuracy, precision, recall = logreg(features, target)\n",
+    "predNN, classesNN, weightsNN, accuracyNN, precisionNN, recallNN = logreg(featuresNoNames, target)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "source": [
-    "print('Accuracy logistic regression model: ', accuracy)\r\n",
-    "print('Accuracy logistic regression model without names: ', accuracyNN)\r\n",
-    "\r\n",
-    "print('Precision logistic regression model: ', precision)\r\n",
-    "print('Precision logistic regression model without names: ', precisionNN)\r\n",
-    "\r\n",
-    "print('Recall logistic regression model: ', recall)\r\n",
-    "print('Recall logistic regression model without names: ', recallNN)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Accuracy logistic regression model:  0.8120603015075377\n",
       "Accuracy logistic regression model without names:  0.7065326633165829\n",
@@ -413,50 +402,53 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "print('Accuracy logistic regression model: ', accuracy)\n",
+    "print('Accuracy logistic regression model without names: ', accuracyNN)\n",
+    "\n",
+    "print('Precision logistic regression model: ', precision)\n",
+    "print('Precision logistic regression model without names: ', precisionNN)\n",
+    "\n",
+    "print('Recall logistic regression model: ', recall)\n",
+    "print('Recall logistic regression model without names: ', recallNN)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "source": [
-    "\r\n",
-    "# import sys\r\n",
-    "# import util\r\n",
-    "# del sys.modules[\"util\"]\r\n",
-    "# from util import *\r\n",
-    "\r\n",
-    "n = 5\r\n",
-    "\r\n",
-    "# calcualte the top n most distincive words for each class\r\n",
-    "class_words_dict = top_n_distinctive_words(n, df_tfidf, classes, weights)\r\n",
-    "class_words_dictNN = top_n_distinctive_words(n, df_tfidfNoNames, classesNN, weightsNN)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package wordnet to /home/samantha/nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "\n",
+    "# import sys\n",
+    "# import util\n",
+    "# del sys.modules[\"util\"]\n",
+    "# from util import *\n",
+    "\n",
+    "n = 5\n",
+    "\n",
+    "# calcualte the top n most distincive words for each class\n",
+    "class_words_dict = top_n_distinctive_words(n, df_tfidf, classes, weights)\n",
+    "class_words_dictNN = top_n_distinctive_words(n, df_tfidfNoNames, classesNN, weightsNN)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "source": [
-    "# print the top n most distinctive words for classification\r\n",
-    "print('With names:')\r\n",
-    "display_words(class_words_dict)\r\n",
-    "print('Without names:')\r\n",
-    "display_words(class_words_dictNN)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "With names:\n",
       "high\n",
@@ -495,34 +487,20 @@
      ]
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
+   "source": [
+    "# print the top n most distinctive words for classification\n",
+    "print('With names:')\n",
+    "display_words(class_words_dict)\n",
+    "print('Without names:')\n",
+    "display_words(class_words_dictNN)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.7 64-bit (windows store)"
+   "display_name": "Python 3.8.9 64-bit",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -534,10 +512,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.9"
   },
-  "interpreter": {
-   "hash": "eb671d3e83e243e6bc8ababb9df664cd48306662d88c6dab3118008ea7f0fca9"
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
